--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Avicenna</title>
+	<title id="title">Avicenna</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
+<main id="main">
 <body>
+	<div id="img-div">
+		<img id="image" src="">
+		<caption id="img-caption"></caption>
+	</div>
 	<h1>Avicenna</h1>
-	<P></P>
+	<p id="tribute-info"></p>
 
-	<p id="footnote"></p>
+	<p id="tribute-link">For more information<a href="" target="_blank">click here</a></p>
 
 </body>
+</main>
 </html>
