--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title id="title">Avicenna</title>
+	<title id="title">Frida Kahlo</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -12,8 +12,8 @@
 		<img id="image" src="">
 		<caption id="img-caption"></caption>
 	</div>
-	<h1>Avicenna</h1>
-	<p id="tribute-info"></p>
+	<h1>Frida Kahlo</h1>
+	<p id="tribute-info">Avicenna was a Persian polymath has been described as the father of early modern medicine</p>
 
 	<p id="tribute-link">For more information<a href="" target="_blank">click here</a></p>
 
