--- a/index.html
+++ b/index.html
@@ -8,12 +8,44 @@
 </head>
 <main id="main">
 <body>
-	<div id="img-div">
-		<img id="image" src="">
-		<caption id="img-caption"></caption>
-	</div>
+	
 	<h1>Frida Kahlo</h1>
-	<p id="tribute-info">Avicenna was a Persian polymath has been described as the father of early modern medicine</p>
+	<div id="img-div">
+		<img id="image" src="frida.jpg" alt="frida Kahlo's photo">
+		<caption id="img-caption"></caption>
+		<div id="caption">"I paint self-portraits because I am so often alone, because I am the person I know best.” <br>
+						- Frida Kahlo</div>
+	</div>
+	<p id="tribute-info">Frida Kahlo de Rivera is considered as one of the Mexico's greatest artists who painted many portraits, self-portraits and works inspired by the nature and artifacts of Mexico. She was born in 6 July 1907 in Mexico City from a German decent father and a <a href="https://en.wikipedia.org/wiki/Mestizo" target="_blank">mestiza</a> mother.
+	</p>
+
+	<p>Frida became disabled by folio when she was a child and was bedridden for nine months. At the age of eighteen, a tragic accident put her in a serious injury. During her recovery, she started painting and finished her first <a href="https://www.fridakahlo.org/self-portrait-in-a-velvet-dress.jsp" target="_blank">self portrate </a> a year later. </p>
+
+	<p>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	</p>
+	<p>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	</p>
+
+	<p>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	</p>
 
 	<p id="tribute-link">For more information<a href="" target="_blank">click here</a></p>
 
