--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	<meta name="description" content="A Frida Kahlo Tribute Page">
 	<meta name="author" content="Sevda Amini">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="containter" type="html" href="containter.html">
-	<link rel="video" type="html" href="video.html">
 </head>
 <main id="main">
+
 <body>
+
 	<!--------------------------------------------->
 
 	<h1>Frida Kahlo</h1>
@@ -19,21 +19,29 @@
 	<!-------------------------------------------->
 	<div id="img-div">
 		<img id="image" src="frida.jpg" alt="frida Kahlo's photo"><br>
-		<caption id="img-caption">"I paint self-portraits because I am so often alone, because I am the person I know best.” <br>-Frida Kahlo</caption>	
-	<!--------------------------------------------->					
-	</div>
+		<caption id="img-caption">"I paint self-portraits because I am so often alone, <br> because I am the person I know best.” <br>-Frida Kahlo</caption>
+		</div>	
+	<!--------------------------------------------->
+
+	
 	<div id="box-div">
 		<div id="tribute-info">
-	<p id="tribute-info">Frida Kahlo de Rivera is considered as one of the Mexico's greatest artists who painted many portraits, self-portraits and works inspired by the nature and artifacts of Mexico. She was born in 6 July 1907 in Mexico City from a German decent father and a <a href="https://en.wikipedia.org/wiki/Mestizo" target="_blank">mestiza</a> mother.
+	<p id="tribute-info">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 	</p>
 
-	<p>Frida became disabled by folio when she was a child and was bedridden for nine months. At the age of eighteen, a tragic accident put her in a serious injury. During her recovery, she started painting and finished her first <a href="https://www.fridakahlo.org/self-portrait-in-a-velvet-dress.jsp" target="_blank">self portrate </a> a year later. </p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+</div>
 
-</div>
-<div id="video-info">
-<iframe src="https://youtu.be/vpJDLApWG9Q?autoplay=0" width="420" height="315">
-</iframe>
-</div>
 
 </div>
   <!------------------------------------------------>
