--- a/index.html
+++ b/index.html
@@ -26,21 +26,19 @@
 	
 	<div id="box-div">
 		<div id="tribute-info">
-	<p id="tribute-info">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	<p id="tribute-info">
+		Frida Kahlo is considered as one of Mexico's greatest artists. Her works are deeply influenced by bright colors and dramatic symbolism of mexican indigenous culture and personal experiences such as her miscariages and her numerous operations. She says, "I never painted dreams. I painted my own reality" that is why her paintings are an absolute portrayals of pain. 
 	</p>
 
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+	</div>
+
+		<div id="painting-div">
+		<img src="panting1.jpg" alt="two fridas' painting">
 </div>
+
+
+	
+
 <div id="video-div">
 	<iframe src="https://youtu.be/vpJDLApWG9Q" width="420" height="315">
 		
@@ -49,7 +47,8 @@
 
 </div>
   <!------------------------------------------------>
-	<p id="tribute-link">For more information<a href="" target="_blank">click here</a></p>
+  <h3>References</h3>
+	<p id="tribute-link">Frida Kahlo Foundation-<a href="https://www.frida-kahlo-foundation.org/biography.html" target="_blank"> click here </a> for more information</p>
 
 <footer>Created by Sevda Amini 2018</footer>
 
