--- a/index.html
+++ b/index.html
@@ -29,16 +29,21 @@
 	<p id="tribute-info">
 		Frida Kahlo is considered as one of Mexico's greatest artists. Her works are deeply influenced by bright colors and dramatic symbolism of mexican indigenous culture and personal experiences such as her miscariages and her numerous operations. She says, "I never painted dreams. I painted my own reality" that is why her paintings are an absolute portrayals of pain. 
 	</p>
+	<p>The Two Fridas is one Frida Kahlo's most famous paintings which has been painted on a very large canvas (1.74 × 1.73 metres). This painting shows twin figures holding hands, each figure representing an opposing side of Kahlo. The figure to the left, dressed in a European-style wedding dress, is the side that Rivera purportedly rejected, and the figure to the right, dressed in Tehuana attire, is the side Rivera loved best. The full heart of the indigenous Kahlo is on display, and from it an artery leads to a miniature portrait of Rivera that she holds in her left hand. Another artery connects to the heart of the other Kahlo, which is fully exposed and reveals the anatomy within. The end of the artery is cut, and the European Kahlo holds a surgical instrument seemingly to stem the flow of blood that drips onto her white dress.
+	</p>
 
-	</div>
 
-		<div id="painting-div">
-		<img src="panting1.jpg" alt="two fridas' painting">
+
+		<img src="twofridas.jpg" alt="two fridas' painting" id="painting">
+
+		<p>
+			Frida Kahlo's fame has been growing after her death. Her Blue House was opened as a museum in the year of 1958. In 1970s the interest on her work and life are renewed due to the feminist movement, since she was viewed as an icon of female creativity. In 1983, Hayden Herrera published his book on her, A Biography of Frida Kahlo, which drew more attention from the public to this great artist. In the year of 2002, a movie named Frida was released, staring alma Hayek as Frida Kahlo and Alfred Molina as Diego Rivera. This movie was nominated for six Academy Awards and won for Best Makeup and Original Score.
+		</p>
+
+		
 </div>
-
-
 	
-
+<br>
 <div id="video-div">
 	<iframe src="https://youtu.be/vpJDLApWG9Q" width="420" height="315">
 		
@@ -48,9 +53,11 @@
 </div>
   <!------------------------------------------------>
   <h3>References</h3>
-	<p id="tribute-link">Frida Kahlo Foundation-<a href="https://www.frida-kahlo-foundation.org/biography.html" target="_blank"> click here </a> for more information</p>
+	<p id="tribute-link">* Frida Kahlo Foundation-<a href="https://www.frida-kahlo-foundation.org/biography.html" target="_blank"> www.frida-kahlo-foundation.org</a><br>* Frida Kahlo Paintings, Biography, Quotes-<a href="https://www.fridakahlo.org/frida-kahlo-biography.jsp" target="_blank"> www.fridakahlo.org</a>
+	</p>
+	
 
-<footer>Created by Sevda Amini 2018</footer>
+<footer>Created by Sevda Amini @2018</footer>
 
 </body>
 </main>
